# arquivos-estudo

./: README.md
Cpp/DesenvolvimentoCpp/: README.md
Cpp/DesenvolvimentoCpp/PhotoBatch/: CMakeLists.txt  main.cpp
Cpp/DesenvolvimentoCpp/PhotoBatch/include/: Mode.hpp  RenameMode.hpp  ResizeMode.hpp  ScaleMode.hpp  utils.hpp
Cpp/DesenvolvimentoCpp/PhotoBatch/src/: ResizeMode.cpp  createMode.cpp
Cpp/DesenvolvimentoCpp/PhotoBatch/tests/: CMakeLists.txt
HTML CSS JS/: README.md
HTML CSS JS/010 - Folhas de estilos externa e cascata/: style.css
HTML CSS JS/013 - Exercício CSS 01/: style.css
HTML CSS JS/019 - Exercício CSS 02/: index.html
HTML CSS JS/029 - Media Queries/: style.css
HTML CSS JS/053 - SVGs/: index.html
HTML CSS JS/065 - Variaveis Javascript/: index.html
HTML CSS JS/067 - Seletores Javascript/: index.html
HTML CSS JS/069 - Condicionais - IF Else/: index.html
HTML CSS JS/074 - Array/: main.js  style.css
HTML CSS JS/083 - JQuery - Seletores e CSS/: index.html
HTML CSS JS/088 - Projeto Final/: index.html
PHP/: README.md
PHP/01_intro/: dois.php
PHP/03_tipos_de_dados/: index.php
PHP/04_variaveis/: index.php
PHP/06_estruturas_de_controle/: index.php
PHP/07_estruturas_de_repeticao/: index.php
PHP/08_inclusao_de_codigo/: funcs.php  funcs2.php  index.php
PHP/09_funcoes/: index.php
PHP/11_arrays/: index.php
PHP/12_oop/: index.php
PHP/13_trabalhando_com_datas/: index.php
PHP/14_php_e_a_web/: metodos.txt  variaveis globais do php.txt
PHP/15_blog/: contact.php  index.php  post.php
PHP/16_php_mysql/: 01_conexao.php  (+3 more)
(+186 files in other folders)
